; ModuleID = '/home/carl/AnghaBench/mruby/mrbgems/mruby-io/src/extr_io.c_mrb_io_sync.c'
source_filename = "/home/carl/AnghaBench/mruby/mrbgems/mruby-io/src/extr_io.c_mrb_io_sync.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mrb_io = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mrb_io_sync(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.mrb_io*, align 8
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32*, i32** %3, align 8
  %7 = load i32, i32* %4, align 4
  %8 = call %struct.mrb_io* @io_get_open_fptr(i32* %6, i32 %7)
  store %struct.mrb_io* %8, %struct.mrb_io** %5, align 8
  %9 = load %struct.mrb_io*, %struct.mrb_io** %5, align 8
  %10 = getelementptr inbounds %struct.mrb_io, %struct.mrb_io* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @mrb_bool_value(i32 %11)
  ret i32 %12
}

declare dso_local %struct.mrb_io* @io_get_open_fptr(i32*, i32) #1

declare dso_local i32 @mrb_bool_value(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
